welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: value let
	let flag=true;
        ^noTriples:3: error: not found: value flag
	if (nums.length < 3) return flag;
                                    ^noTriples:6: error: not found: value flag
			if (nums(i) == nums(i+1) == nums (i+2)) flag = false;
                                                                ^noTriples:8: error: not found: value flag
	return flag;}
               ^